--- a/Worrksheet_set_1/python_worksheet-1.ipynb
+++ b/Worrksheet_set_1/python_worksheet-1.ipynb
@@ -1,1 +1,240 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "c10e1129",
+   "metadata": {},
+   "source": [
+    "#Factorial of a Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ffd2b53a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 3 is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3\n",
+    "factorial = 1\n",
+    "if x < 0:\n",
+    "   print(\"Please enter a positive number\")\n",
+    "elif x == 0:\n",
+    "   print(\"The factorial of 0 is 1\")\n",
+    "else:\n",
+    "   for i in range(1,x + 1):\n",
+    "       factorial = factorial*i\n",
+    "   print(\"The factorial of\",x,\"is\",factorial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "740bb275",
+   "metadata": {},
+   "source": [
+    "#12. Write a python program to find whether a number is prime or composite."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "01a87331",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 is a PRIME number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 19\n",
+    "if num > 1:\n",
+    "    for i in range(2, num):\n",
+    "        if (num % i) == 0:\n",
+    "            print(num, \"is NOT a prime number\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(num, \"is a PRIME number\")\n",
+    "elif num == 0 or 1:\n",
+    "    print(num, \"is a neither prime NOR composite number\")\n",
+    "else:\n",
+    "    print(num, \"prime number is defined only for whole numbers >0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6846ac6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1598cc90",
+   "metadata": {},
+   "source": [
+    "#13. Write a python program to check whether a given string is palindrome or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f68bca04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPalindrome(s):\n",
+    "    return s == s[::-1]\n",
+    " \n",
+    " \n",
+    "# Driver code\n",
+    "mystr = \"malayalam\"\n",
+    "ans = isPalindrome(mystr)\n",
+    " \n",
+    "if ans:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab836281",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afd102bd",
+   "metadata": {},
+   "source": [
+    "#14. Write a Python program to get the third side of right-angled triangle from two given sides."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c060995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pythagoras(opposite_side,adjacent_side,hypotenuse):\n",
+    "        if opposite_side == str(\"x\"):\n",
+    "            return (\"Opposite = \" + str(((hypotenuse**2) - (adjacent_side**2))**0.5))\n",
+    "        elif adjacent_side == str(\"x\"):\n",
+    "            return (\"Adjacent = \" + str(((hypotenuse**2) - (opposite_side**2))**0.5))\n",
+    "        elif hypotenuse == str(\"x\"):\n",
+    "            return (\"Hypotenuse = \" + str(((opposite_side**2) + (adjacent_side**2))**0.5))\n",
+    "        else:\n",
+    "            return \"You know the answer!\"\n",
+    "    \n",
+    "print(pythagoras(3,4,'x'))\n",
+    "print(pythagoras(3,'x',5))\n",
+    "print(pythagoras('x',4,5))\n",
+    "print(pythagoras(3,4,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c60b10c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08afe66",
+   "metadata": {},
+   "source": [
+    "#15.Write a python program to print the frequency of each of the characters present in a given string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e6f431e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'k': 2, 'a': 3, 'i': 1, 'n': 1, 'd': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "res={}\n",
+    "test_str='Kakinada'\n",
+    "for i in test_str.lower():\n",
+    "    res[i]=0\n",
+    "    for j in test_str.lower():\n",
+    "        if i==j:\n",
+    "            res[i]=res[i]+1\n",
+    "        else:\n",
+    "            continue\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6960844f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be38894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
